--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Conway's Game of Life simulator"
+      content="Conway's Game of Life, with a twist"
     />
     <title>Game of Life</title>
   </head>
