--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Conway's Game of Life, with a twist"
-    />
+    <meta name="description" content="Conway's Game of Life, with a twist" />
     <title>Game of Life</title>
   </head>
   <body>
